--- a/app/img/scss/main.scss
+++ b/app/img/scss/main.scss
@@ -13,7 +13,6 @@ $green-review:#086635;
 $gray:#999999;
 html{
   font: normal 16px RobotoRegular;
-  letter-spacing: 0.03rem;
 
   @media (max-width: 1200px) {
     font-size: 15px;
@@ -364,7 +363,7 @@ header,footer{
       }
     }
     .discover {
-      width: 77%;
+      width: 82%;
       border: solid 1px #ffffff;
       a:hover{
         background-color: #ffffff;
@@ -373,8 +372,8 @@ header,footer{
       }
     }
     .use {
-      width: 20%;
-      margin-left: calc(3% - 5px);
+      width: 15%;
+      margin-left: calc(3% - 4px);
       border: solid 1px #2c662f;
       a:hover{
         background-color: #2c662f;
@@ -555,13 +554,13 @@ header,footer{
       input, textarea{
         box-sizing: border-box;
         padding-left:10px;
-        margin:0.3rem 0;
+        margin:5px 0;
         outline: none;
         border: 1px solid #acacac;
         display: inline-block;
         width: 100%;
-        height: 2rem;
-        max-height: 4rem;
+        height: 5vh;
+        max-height: 40px;
         font-size:1.125rem;
         font-family: RobotoRegular;
 
