--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -286,7 +286,7 @@ header,footer{
     box-sizing: border-box;
     margin: 5.5vh 0 4.2vh;
     padding: 5.5vh 2rem 0;
-    height: 56vmin;
+    height: 58vmin;
     width: 52vh;
     background:black;
     &:first-of-type{
@@ -298,16 +298,16 @@ header,footer{
     img {
       display: block;
       margin: 0 auto;
-      width: 40vmin;
+      width: 35vmin;
       height: auto;
     }
     p {
       position: absolute;
       left: 0;
-      top: 0;
+      bottom: 0;
       width: 100%;
       box-sizing: border-box;
-      padding: 36vh 2rem 0;
+      padding: 0 2rem 2rem;
       font-size: 1rem;
       line-height: 1.5;
       text-align: left;
@@ -324,7 +324,8 @@ header,footer{
         right: 0;
         z-index: 5;
         box-sizing: padding-box;
-        padding: 28vh 2rem 0;
+        padding-left: 2rem;
+        padding-top: 30vmin;
         font-family: BaskervilleOldFace;
         font-size: 3.75rem;
         line-height: 0.6;
