--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -196,6 +196,7 @@ header,footer{
   .row{
     position: relative;
     width: 100%;
+    height: 100vh;
     padding: 0;
     display: flex;
     justify-content: center;
